Fix headline spacing on mobile

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -87,6 +87,12 @@ header {
         font-size: inherit;
       }
     }
+
+    .big {
+      @media (max-height: 1050px) {
+        line-height: 1em;
+      }
+    }
   }
 
   .chatter {
